updates customers module
